[package]
name = "sqlxmq"
version = "0.1.1"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Diggsey/sqlxmq"
description = "A reliable job queue using PostgreSQL as a backing store"
readme = "README.md"
documentation = "https://docs.rs/sqlxmq"

[workspace]
members = ["sqlxmq_macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.1", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "uuid",
] }
tokio = { version = "1.3.0", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }
log = "0.4.14"
serde_json = "1.0.64"
serde = "1.0.124"
sqlxmq_macros = { version = "0.1", path = "sqlxmq_macros" }

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
futures = "0.3.13"
