[package]
name = "sqlxmq"
version = "0.5.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Diggsey/sqlxmq"
description = "A reliable job queue using PostgreSQL as a backing store"
readme = "README.md"
documentation = "https://docs.rs/sqlxmq"

[workspace]
members = ["sqlxmq_macros", "sqlxmq_stress"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "~0.8.1", features = ["postgres", "chrono", "uuid"] }
tokio = { version = "~1.8", features = ["full"] }
dotenvy = "~0.15.7"
chrono = "~0.4.19"
uuid = { version = "~1.1", features = ["v4"] }
log = "~0.4"
serde_json = "~1.0"
serde = "~1.0"
sqlxmq_macros = { version = "0.5.0", path = "sqlxmq_macros" }
anymap2 = "~0.13"

[features]
default = ["runtime-tokio-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

[dev-dependencies]
dotenvy = "0.15.0"
pretty_env_logger = "0.4.0"
futures = "0.3.13"
tokio = { version = "1", features = ["full"] }
