[package]
name = "sqlxmq_macros"
version = "0.3.5"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Diggsey/sqlxmq"
description = "Procedural macros for sqlxmq"
readme = "../README.md"
documentation = "https://docs.rs/sqlxmq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.80", features = ["full"] }
quote = "1.0.10"
proc-macro2 = "1.0.30"
