[package]
name = "sqlxmq_stress"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlxmq = { path = ".." }
tokio = { version = "1.4.0", features = ["full"] }
dotenvy = "0.15.3"
sqlx = "0.6.0"
serde = "1.0.125"
lazy_static = "1.4.0"
futures = "0.3.13"
